<resources>
    <string name="app_name">小米净化</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="about_msg">\n小米净化适配于MIUI9系统，主要用于去除系统自带的一些广告和其他一些修改.功能需要Xposed模块和ROOT支持
            \n\n作者:CoderStory
            \n博客主页: blog.coderstory.cn
            \n微博主页: weibo.com/codestory
    </string>
    <string name="G1">
            <b>致谢如下开源项目</b>\n\n
            <b>MaterialDesignDemo</b>\nhttps://github.com/burgessjp/MaterialDesignDemo\n\n
            <b>PullToRefresh</b>\nhttps://github.com/Yalantis\n\n
            <b>root-tools</b>\nhttps://github.com/rarnu/root-tools\n\n
            <b>LicensesDialog</b>\nhttps://github.com/PSDev/LicensesDialog\n\n
    </string>
    <string name="about_msg3"><b>声明</b>\n软件授权协议</string>
    <string name="version">2.0.2</string>
    <string name="alipay_url">https://qr.alipay.com/aex06874ga0wkuhwuajgzb8</string>
    <string name="enableBlockADS"><b>启用模块</b>\n去广告功能的总开关</string>
    <string name="downloadexplorer"><b>下载管理</b>\n去下载管理界面的广告</string>
    <string name="calendar"><b>日历</b>\n去除日历界面上的小广告和默认的卡片</string>
    <string name="filemanager"><b>文件管理器</b>\n去文件管理界面上的热门表情和热门视频等无用信息</string>
    <string name="weather"><b>天气</b>\n去除天气中的广告和天气资讯</string>
    <string name="mms"><b>短信</b>\n去除具体短信信息界面上的充值话费充值流量贷款申请信用卡等垃圾信息，开启后无法直接复制短信验证码</string>
    <string name="blockadsbasic"><b>功能基础模块(必选)</b>\n开启去广告功能必选项</string>
    <string name="enableHosts"><b>启用模块</b>\n开启Hosts支持模块</string>
    <string name="miuiads"><b>屏蔽小米广告</b>\n通过hosts屏蔽部分小米的广告,但可能导致小部分小米服务访问异常</string>
    <string name="blockads"><b>开启常规去广告</b>\nGithub上的hosts合集,用于屏蔽国内广告.</string>
    <string name="googlehosts"><b>开启常见国外网站访问支持</b>\nGithub上随意找的Hosts,包含了一些常见的国外网站,有时效性</string>
    <string name="hostsnote"><b>注意事项:</b>\n本功能需要ROOT权限,所有修改重启后才能生效.hosts的更新需要重新启用一次开关才能生效.国外网站请使用https访问.</string>
    <string name="miui7crack"><b>旧版本的MIUI模式</b>\nMIUI9之前的用户请勾选</string>
    <string name="miui9crack"><b>MIUI9模式</b>\nMIUI9用户请勾选</string>
    <string name="cracknote"><b>注意事项</b>\n此为Xposed插件功能,必须在启用插件的情况下才能使用,且所有选项修改重启生效。</string>
    <string name="enableupdater"><b>开启更新检测</b>\n启用后每次打开应用都会检测一次新版本</string>
    <string name="enablexposed"><b>开启Xposed启用检测</b>\n开启后,如果未在Xposed中激活则弹出相应提示</string>
    <string name="miui_root_25"><b>去除MIUI Root的25秒等待</b>\n开启后使用MIUI自带的ROOT授权无需等待25秒的倒计时</string>
    <string name="RemoveSearchBar"><b>移除通知栏下拉菜单的搜索</b>\n移除通知栏下拉菜单中的搜索框\nXposed目前不兼容FBE,7.x的机型可能无法开启本功能</string>
    <string name="enableSafeCenter"><b>去除安全中心的推广信息</b>\n去除安全中心中显示的推广信息</string>
    <string name="mvadnote"><b>注意事项</b>\n部分应用需要清空应用数据才能去除广告,并且有些广告是可以在应用中直接关闭的，并不需要本插件去修改.</string>
    <string name="music"><b>屏蔽音乐广告</b>\n屏蔽系统自带的音乐APP中的广告内容</string>
    <string name="wifi"><b>修复wifi自动连接</b>\n修复系统提示wifi热点未检测网络连接而不会自动连接的问题,需ROOT</string>
    <string name="enablethemenoad"><b>去除miui主题广告</b>\n去除miui个性主题的主题详情页的图片广告</string>
    <string name="hideicon"><b>隐藏应用图标</b>\n隐藏小米净化在桌上面的图标，隐藏图标后可在Xposed安装器中打开</string>
    <string name="installapk"><b>APK安装模式</b>\n默认为显示安装模式（普通模式），开启选项后改为后台安装模式(静默安装)。在MIUI系统中，由于系统底层机制被修改，无法开启静默安装，否则会安装失败，切记！</string>
    <string name="hide_icon_label"><b>隐藏桌面图标标签</b>\n隐藏桌面图标下的文字,不能隐藏文件夹的名字，但可以通过修改文件夹的名字为【一个空格】的方式解决</string>
    <string name="corepatch">核心破解</string>
    <string name="downgr"><b>允许降级安装应用 - 实时生效</b>\n允许应用在安装新版本的情况下直接覆盖安装旧版本</string>
    <string name="authcreak"><b>禁用软件包管理器签名验证 - 实时生效</b>\n关闭安装应用时的签名验证,可以安装被篡改的应用</string>
    <string name="zipauthcreak"><b>禁用APK签名验证 - 实时生效</b>\n允许直接覆盖安装同包名不同签名的应用</string>
    <string name="prevent_freeze_reverse"><b>阻止自动恢复被禁用的APP</b>\n部分被冻结的系统app在系统后会自动解冻，开启后将不会自动恢复</string>
    <string name="Tips_Title">温馨提示</string>
    <string name="Btn_Sure">确定</string>
    <string name="Btn_Cancel">取消</string>
    <string name="App_Update">应用更新</string>
    <string name="Update">立即更新</string>
    <string name="Downloading">正在下载。。。</string>
    <string name="Download_Success">下载完毕</string>
    <string name="Download_Fail">下载错误</string>
    <string name="Tips_HotBoot">你确定要快速重启系统吗？</string>
    <string name="copy_url">复制链接</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="fastboot">快速重启</string>
    <string name="about">关于应用</string>
    <string name="MIUI_Purify">净化广告</string>
    <string name="fucktheme">主题和谐</string>
    <string name="hosts">Hosts设置</string>
    <string name="disableapp">冻结应用</string>
    <string name="appclean">应用清理</string>
    <string name="othersettings">其他设置</string>
    <string name="other">其他</string>
    <string name="myblog">我的博客</string>
    <string name="changeskin">主题换肤</string>

    <string name="Working">正在处理</string>
    <string name="Waiting">请耐心等待。。</string>
    <string name="noupdater"><b>禁止系统检测更新</b>\n禁止系统更新检测新版本</string>
    <string name="nostore"><b>禁止部分应用联网</b>\n屏蔽自带的应用商店,视频和一点资讯联网</string>
    <string name="title_activity_app_intro">AppIntro</string>
    <string name="skip">退出</string>

    <string name="disableapptips">提示:点击应用切换冻结状态</string>
    <string name="sureAntiDisable">你确定要解除</string>
    <string name="sureAntiDisableAfter">的冻结状态吗?</string>
    <string name="sureDisable">你确定要冻结</string>
    <string name="sureDisableAfter">吗?</string>
    <string name="loadappinfo">正在读取应用信息。。。</string>


    <string name="view_ready">已准备就绪, 请点击『开始清理』按钮开始清理…\n</string>
    <string name="view_start_clean">开始清理, 请耐心等待…\n</string>
    <string name="view_clean_cache" formatted="false">清理: %s (%s) …\n</string>
    <string name="view_clean_anr" formatted="false">清理 ANR 日志 (%s) …\n</string>
    <string name="view_clean_art_remain" formatted="false">清理 ART: %s (%s) …\n</string>
    <string name="view_clean_complete" formatted="false">清理完毕, 共清理文件 %s\n\n</string>
    <string name="xposedmodule">\n<b>其他</b></string>
    <string name="startclean">开始清理</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="isWorkingTips">请耐心等待应用清理完成再进行其他的操作！</string>

    <string name="tab_1">备份应用</string>
    <string name="tab_2">还原应用</string>

    <string name="notices_title">开放源代码许可</string>
    <string name="notices_close">关闭</string>

    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="multiple_include_own">Multiple with own License</string>
    <string name="multiple_programmatic">Multiple programmaticly</string>
    <string name="single_fragment">Single (Fragment)</string>
    <string name="multiple_fragment">Multiple (Fragment)</string>
    <string name="multiple_include_own_fragment">Multiple with own License (Fragment)</string>
    <string name="multiple_programmatic_fragment">Multiple programmaticly (Fragment)</string>
    <string name="custom_theme">Custom theme</string>
    <string name="custom_theme_fragment">Custom theme (Fragment)</string>
    <string name="cp_url_success">已复制网址到粘贴板！</string>
    <string name="share_url">网址分享</string>
    <string name="starting_clean">开始清理</string>
    <string name="clean_success">应用清理完成！</string>
    <string name="cleaning">正在清理中…</string>
    <string name="tips_backup_success">OK,列表备份完成！</string>
    <string name="tips_backup_error">备份失败,一般是因为APP没读写存储权限导致的</string>
    <string name="backup_list">备份列表</string>
    <string name="tips_sure_backuplist">你确定要备份当前系统应用的冻结列表吗?</string>
    <string name="tips_sure_restore_settings">还原设置</string>
    <string name="restore_set">你确定要还原当前系统应用的冻结状态吗?</string>
    <string name="refreshing_list">OK,正在刷新列表</string>
    <string name="tips">提示</string>
    <string name="restoreing">OK,正在恢复配置！</string>
    <string name="not_fond_backup_list">未找到备份列表！</string>
    <string name="not_fond_backup_list_file">未找到备份列表！</string>
    <string name="hide_app_icon">隐藏桌面图标</string>
    <string name="navigation_item_ManagerApp">应用管理</string>
    <string name="navigation_item_donation">捐赠</string>
    <string name="fixpcb"><b>禁用窗口权限检测</b>\n修复PCB在miui8上的问题,仅Android 6.0系统可用</string>
    <string name="historyFunctions">历史功能</string>
    <string name="appname">应用名: %1$s \n版本号 :%2$s</string>
    <string name="others_appsettings">应用设置</string>



</resources>
