<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    skin:enable="true"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:skin="http://schemas.android.com/android/skin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/enableHosts"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:maxLines="10"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/enableHosts" />


            <Switch
                android:id="@+id/enableMIUIHosts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/miuiads" />

            <Switch
                android:id="@+id/enableBlockAdsHosts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/blockads" />



            <Switch
                android:id="@+id/enableStore"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/nostore" />


            <Switch
                android:id="@+id/enableupdater"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/noupdater" />

            <Switch
                android:id="@+id/enableGoogleHosts"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/googlehosts" />



            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="20dp"
                android:text="@string/hostsnote" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>