<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    skin:enable="true">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:skin="http://schemas.android.com/android/skin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="常用功能"
                skin:enable="true" />

            <Switch
                android:id="@+id/enableCheck"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:checked="true"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/enablexposed" />


            <Switch
                android:id="@+id/gantanhao"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/wifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:text="@string/xposedmodule"
                skin:enable="true" />

            <Switch
                android:id="@+id/enablemiuiRoot"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/miui_root_25" />

            <Switch
                android:id="@+id/RemoveSearchBar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/RemoveSearchBar" />

            <Switch
                android:id="@+id/miuiMusicCustomization"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/miuimusic" />

            <Switch
                android:id="@+id/fixpcb"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/fixpcb" />




            <Switch
                android:id="@+id/hideicon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/switchBtn"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/hideicon" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>