<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher"
                app:border_color="#fff"
                app:border_overlay="true"
                app:border_width="2dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="版本号:"

                    android:textColor="#2d2d2d"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/version"

                    android:textColor="#2d2d2d"
                    android:textSize="16sp" />


            </LinearLayout>




            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/windowBackground"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:autoLink="none"
                    android:linksClickable="false"
                    android:text="@string/about_msg"
                    android:textColor="#262626"
                    android:textColorLink="#40aff4"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/os"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView


                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:autoLink="none"
                    android:linksClickable="false"

                    android:text="@string/about_msg3"
                    android:textColor="#262626"
                    android:textSize="14sp" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/tv_content4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:autoLink="none"
                    android:textColorLink="#000"

                    android:linksClickable="false"
                    android:text="@string/G1"
                    android:textColor="#262626"
                    android:textSize="14sp" />
            </android.support.v7.widget.CardView>






        </LinearLayout>


    </ScrollView>
</LinearLayout>